# langgraph-agent-engineering

./: .env.example  .gitignore  PROJECT_PLAN.md  README.md  docker-compose.yml  learning.md  project_info.md  pyproject.toml
.github/workflows/: ci.yml  eval.yml
data/synthetic/: .gitkeep  interview_notes_senior_java.txt  job_senior_java_cloud.md  resume_alice_chen.txt  resume_bob_martinez.txt  resume_carol_singh.txt
docs/: architecture.md  aws-mapping.md  narrative-alignment.md  resume-justification.md
docs/learning/: phase1-rag.md  phase2-agents.md  phase3-production.md
docs/mcp/: README.md
eval/: metrics.py  run_deepeval.py  run_golden_eval.py  run_mcp_equivalence.py
eval/golden_sets/: phase1a.json  phase1b.json
eval/promptfoo/: promptfoo.yaml
eval/promptfoo/prompts/: variant_a_fewshot.txt  variant_b_structured.txt  variant_c_concise.txt
frontend/react/: index.html  package-lock.json  package.json
frontend/react/src/: App.tsx  main.tsx
infra/aws/: README.md  api_gateway.tf  bedrock_iam.tf  elasticache.tf  lambda_ingest.tf  main.tf  outputs.tf  rds.tf  s3.tf  secrets_manager.tf  variables.tf
infra/aws/eks_milvus/: helm-values.yaml  main.tf
infra/sql/: init.sql
scripts/: retry_failed_ingestion.sh  seed_synthetic_data.sh
src/talentscreen/: __init__.py  config.py
src/talentscreen/agents/: graph.py  pending_store.py  query_parsing.py  service.py  state.py
src/talentscreen/api/: agents.py  auth.py  jobs.py  main.py  mcp_routes.py
src/talentscreen/db/: models.py  session.py
src/talentscreen/debug/: cli.py  streamlit_app.py
src/talentscreen/generation/: citations.py  rag.py
src/talentscreen/guardrails/: injection.py  pii.py
src/talentscreen/ingestion/: chunking.py  parsers.py  pipeline.py  router.py  storage.py  worker.py
src/talentscreen/mcp/: equivalence.py  postgres_server.py  rag_server.py  wrappers.py
src/talentscreen/observability/: langfuse_tracer.py
tests/unit/: test_agents.py  test_async_bridge.py  test_ingestion_router.py  test_mcp_equivalence.py  test_phase1b.py  test_phase3.py  test_query_parsing.py  test_week2_rag.py
(+42 files in other folders)
