[project]
name = "talentscreen"
version = "0.1.0"
description = "RAG + LangGraph multi-agent hiring platform (local portfolio build)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis>=5.2.0",
    "arq>=0.26.1",
    "minio>=7.2.12",
    "pymilvus>=2.4.9",
    "httpx>=0.28.0",
    "python-multipart>=0.0.17",
    "sentence-transformers>=3.3.0",
    "numpy>=1.26.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "presidio-analyzer>=2.2.354",
    "presidio-anonymizer>=2.2.354",
    "langfuse>=2.0.0",
    "streamlit>=1.40.0",
    "rank-bm25>=0.2.2",
    "mcp>=1.2.0",
    "langchain-core>=0.3.21",
    "langchain-text-splitters>=0.3.2",
    "langgraph>=0.3.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary,pool]>=3.2.0",
    "email-validator>=2.2.0",
    "unstructured[pdf]>=0.16.11",
    "python-docx>=1.1.2",
    "pypdf>=5.1.0",
]

[project.optional-dependencies]
docling = ["docling>=2.15.0"]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "httpx>=0.28.0",
]
eval = [
    "deepeval>=1.5.0",
]

[project.scripts]
talentscreen-worker = "talentscreen.ingestion.worker:run_worker_cli"
talentscreen-api = "talentscreen.api.main:run_server"
talentscreen-debug = "talentscreen.debug.cli:main"
talentscreen-mcp-rag = "talentscreen.mcp.rag_server:main"
talentscreen-mcp-postgres = "talentscreen.mcp.postgres_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/talentscreen"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/talentscreen/db/models.py" = ["E501"]
